--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5"
   },
