--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gama-academy/smash-web": "^2.10.0",
+    "@hookform/resolvers": "^2.9.8",
     "axios": "^0.27.2",
     "big.js": "^6.2.1",
     "bootstrap": "^5.2.0",
@@ -17,6 +18,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5"
@@ -27,9 +29,11 @@
     "@types/react-dom": "17.0.2",
     "@types/styled-components": "^5.1.25",
     "@types/styled-system": "^5.1.15",
+    "@types/yup": "^0.32.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "yup": "^0.32.11"
   }
 }
