--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
-    "typescript": "4.7.4",
-    "yup": "^0.32.11"
+    "typescript": "4.7.4"
+ 
   }
 }
